--- a/Site/index.html
+++ b/Site/index.html
@@ -3,6 +3,6 @@
 <html>
 	<title>Coursera-Test</title>
 	<body>
-		<h1>Coursera-Test</h1>
+		<h1>Coursera-Test! This is a great course</h1>
 	</body>
 </html>
